
2020-02-15  Ron Norman <rjn@inglenet.com>
	* common.h, fileio.c, fileio.h, foci.c, fodbc.c, fsqlxfd.c:
		Updates to support RELATIVE file for processing by
		the OCI/ODBC I/O modules.
		A 'RELATIVE" table has a column called 'rid_tablename'
		which is PRIMARY KEY.
		As much code as possible was moved into fileio.c to
		manage the logical 'record number' so that foci.c & fodbc.c
		do not need to duplicate that logic

2020-02-13  Ron Norman <rjn@inglenet.com>
	* fsqlxfd.c: Call cob_xfd_to_ddl if 'create_table' was 'true'
				and table.ddl is not present
	* common.c,fileio.h,coblocal.h: Updates for 'create_table'
	* foci.c, fodbc.c: Pick up 'create_table' option
	* fileio.c: Use cob_dictionary_path if defined

2020-02-12  Ron Norman <rjn@inglenet.com>
	* fsqlxfd.c: Adding cob_xfd_to_ddl routine
	* common.h,fileio.h: Updates for cob_xfd_to_ddl
	* foci.c, fodbc.c: Add checks for Table not defined

2020-02-05  Ron Norman <rjn@inglenet.com>
	* common.h: cob_file and cob_file_key updated
	* fileio.c,fbdb.c: Corrections for using filedef.dd for BDB

2020-01-28  Ron Norman <rjn@inglenet.com>
	* fileio.c,fbdb.c,fsqlxfd.c: Adding casts to avoid C compile warnings
	* fextfh.c,screenio.c,common.c: Adding casts to avoid C compile warnings

2020-01-25  Ron Norman <rjn@inglenet.com>
	* fileio.c: Skips reading records having SUPPRESS WHEN "string"
	            and checks for duplicates on (RE)WRITE if there was
				no WITH DUPLICATES because the underlying file 
				needs to allow DUPLICATES

2020-01-24  Ron Norman <rjn@inglenet.com>
	* Makefile.am: --version-info changed to 5:0:0
	* common.h: cob_file and cob_file_key updated
				some #define replaced by enum
				COB_FILE_VERSION is now 5
	* common.c: Changes to match updated cob_file_key
	* fileio.c: New routines added for setup of cob_file and cob_file_key
				Now skips records having SUPPRESS WHEN "string"
				Several place holders added and code will come later
	* fextfh.c: Changes to match updated cob_file